--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -529,6 +529,7 @@
         "colab": {}
       },
       "source": [
+        "#feature engineering\n",
         "train = train.copy()\n",
         "test = test.copy()\n",
         "train \n",
