--- a/module2-regression-2/LS_DS_213_assignment.ipynb
+++ b/module2-regression-2/LS_DS_213_assignment.ipynb
@@ -1945,7 +1945,8 @@
         "colab": {}
       },
       "source": [
-        "X_test_selected = selector.transform(X_test)"
+        "X_test_selected = selector.transform(X_test)\n",
+        "#GET RUN TIME ERROR DEPENDING ON THE CATEGORICAL VARIABLE"
       ],
       "execution_count": 303,
       "outputs": []
@@ -2065,7 +2066,8 @@
         "  y_pred = model.predict(X_test_selected)\n",
         "  mae = mean_absolute_error(y_test,y_pred)\n",
         "  print(f' Test Mean Absolute Error: ${mae:,.0f}\\n')\n",
-        "\n"
+        "\n",
+        "#works in this sitation but get warning errors if I use the BOROUGH CATEGORY"
       ],
       "execution_count": 318,
       "outputs": [
