--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -512,7 +512,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 182
+          "height": 166
         },
         "outputId": "3879db7f-176f-4992-dbe3-fbf2ce9fc105"
       },
@@ -1308,25 +1308,120 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "j-5aLnVQFdDJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f8cb8468-da5e-457f-83c7-cfba14506fb5"
+      },
+      "source": [
+        "features = ['bedrooms']        # train features \n",
+        "target = ['price']             # target features\n",
+        "\n",
+        "X_test = [[3]]                 # test value\n",
+        "\n",
+        "X_train = df[features]         # train set\n",
+        "y_train =df[target]            # train target  \n",
+        " \n",
+        "model.fit(X_train, y_train)    # fit model \n",
+        "\n",
+        "y_pred = model.predict(X_test) # predict with test value\n",
+        "\n",
+        "y_pred"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4827.73665176]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 122
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kKSODTidK5Ar",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def predict2(n_bed):\n",
+        "    y_pred = model.predict([[n_bed]])\n",
+        "    estimate = y_pred[0]\n",
+        "    coefficient = model.coef_[0]\n",
+        "    print(f'Estimated rent for a {n_bed} bedroom home is {estimate}')\n",
+        "    print(f'the price for each bedroom {coefficient}')"
+      ],
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7A5OJGjzLBPh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "0f645a24-1729-4ce6-fd24-6ffce7778c8b"
+      },
+      "source": [
+        "predict2(3)"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimated rent for a 3 bedroom home is [4827.73665176]\n",
+            "the price for each bedroom [853.25416753]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9IaoaXB1Fepy",
+        "colab_type": "text"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "THpa6DTw2RLG",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "77df3d66-e58f-415e-d897-045cc4424b26"
+        "outputId": "d797ef61-a870-4b60-8b1e-77153ab4a37f"
       },
       "source": [
-        "# ['longitude','latitude']\n",
-        "features = ['bathrooms', 'bedrooms']\n",
-        "target = ['price']\n",
+        "features =  ['bathrooms', 'bedrooms']\n",
+        "target   =  ['price']\n",
         "\n",
-        "xtrain = df[features]\n",
-        "ytrain = df[target]\n",
+        "xtrain   =  df[features]\n",
+        "ytrain   =  df[target]\n",
         "\n",
         "xtrain.shape, ytrain.shape"
       ],
-      "execution_count": 61,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1338,7 +1433,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 135
         }
       ]
     },
@@ -1351,12 +1446,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d40b51a7-c07e-45d2-8233-516439f2b1b7"
+        "outputId": "07fbba3e-c219-4c17-f62f-4f745159aa79"
       },
       "source": [
         "model.fit(xtrain, ytrain)"
       ],
-      "execution_count": 65,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1368,7 +1463,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 136
         }
       ]
     },
@@ -1385,7 +1480,7 @@
         "\n",
         "xtest = [[bedroom_test,bathroom_test]]"
       ],
-      "execution_count": 77,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -1397,13 +1492,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4c120328-3104-4141-c617-3bd9db59aae3"
+        "outputId": "bdbd9fce-f052-427b-eba6-b4421ccb45a7"
       },
       "source": [
         "y_pred = model.predict(xtest)\n",
         "y_pred"
       ],
-      "execution_count": 81,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1510,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 140
         }
       ]
     },
@@ -1428,12 +1523,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "51cc9f39-980d-4287-ca46-21befc3f400b"
+        "outputId": "4fe4e324-014a-47f3-e519-3aa2b7061dff"
       },
       "source": [
         "model.coef_"
       ],
-      "execution_count": 73,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1445,7 +1540,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 141
         }
       ]
     },
@@ -1464,7 +1559,7 @@
         "    print(f'Estimated price for a {n_bed} bed and {n_bath} bath is {estimate}')\n",
         "    print(f'the price for each bedroom {coefficient[0][0]:,.2f}, and {coefficient[0][1]:,.2f} per bathroom')"
       ],
-      "execution_count": 91,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -1476,12 +1571,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "e0499a93-666d-4148-b6fd-5275bd823432"
+        "outputId": "22690db4-0820-47ad-a492-632ac6389ebc"
       },
       "source": [
         "predict(3,3)"
       ],
-      "execution_count": 92,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
