--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -56,10 +56,10 @@
         "\n",
         "The data comes from renthop.com, an apartment listing website.\n",
         "\n",
-        "- [ ] Look at the data. Choose a feature, and plot its relationship with the target.\n",
-        "- [ ] Use scikit-learn for linear regression with one feature. You can follow the [5-step process from Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/05.02-introducing-scikit-learn.html#Basics-of-the-API).\n",
-        "- [ ] Define a function to make new predictions and explain the model coefficient.\n",
-        "- [ ] Organize and comment your code.\n",
+        "- [x] Look at the data. Choose a feature, and plot its relationship with the target.\n",
+        "- [x] Use scikit-learn for linear regression with one feature. You can follow the [5-step process from Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/05.02-introducing-scikit-learn.html#Basics-of-the-API).\n",
+        "- [x] Define a function to make new predictions and explain the model coefficient.\n",
+        "- [x] Organize and comment your code.\n",
         "\n",
         "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
         "\n",
@@ -70,7 +70,7 @@
         "- [If you're using Jupyter Lab locally, you need to install some \"extensions\"](https://plot.ly/python/getting-started/#jupyterlab-support-python-35)\n",
         "\n",
         "## Stretch Goals\n",
-        "- [ ] Do linear regression with two or more features.\n",
+        "- [x] Do linear regression with two or more features.\n",
         "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
         "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
       ]
