--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -3317,33 +3317,33 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 35
         },
-        "outputId": "a9a332a0-e9c8-48b4-d502-42fcdb7989cc"
+        "outputId": "25d60dab-5b6e-4a04-8149-3baf3129ecaf"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "#Traing Test Split\n",
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
         "\n",
-        "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, \n",
-        "                                                  random_state=42)\n",
+        "X_val = val[features]\n",
+        "y_val = val[target]\n",
         "\n",
-        "print(X.shape)\n",
-        "print(X_train.shape)\n",
-        "print(X_val.shape)\n",
-        "\n",
-        "# Check that training and validation contain all observations from X\n",
-        "assert X.shape[0] == X_train.shape[0] + X_val.shape[0]"
+        "X_train.shape, y_train.shape, X_val.shape,y_val.shape\n"
       ],
-      "execution_count": 73,
+      "execution_count": 82,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "(296, 5)\n",
-            "(236, 5)\n",
-            "(60, 5)\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((296, 5), (296,), (85, 5), (85,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
         }
       ]
     },
@@ -3359,7 +3359,7 @@
         "assert X_train.shape[0] == len(y_train)\n",
         "assert X_val.shape[0] == len(y_val)"
       ],
-      "execution_count": 74,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -3381,25 +3381,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "85ace4ea-6eb9-4b0d-87e7-8439ea657272"
+        "outputId": "b57c071e-c4a3-4786-f82d-085fa4e26de9"
       },
       "source": [
         "#Baseline for training set\n",
         "y_train.value_counts(normalize=True).mode()[1]"
       ],
-      "execution_count": 75,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.5847457627118644"
+              "0.5912162162162162"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 84
         }
       ]
     },
@@ -3412,25 +3412,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a7ccbd0e-9b39-42ba-e623-77122184263c"
+        "outputId": "41a60607-daa4-423c-91f9-ddd972cdd9b0"
       },
       "source": [
         "#Baseline for validation set\n",
         "y_val.value_counts(normalize= True).mode()[1]"
       ],
-      "execution_count": 76,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6166666666666667"
+              "0.5529411764705883"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 85
         }
       ]
     },
@@ -3460,7 +3460,7 @@
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.impute import SimpleImputer"
       ],
-      "execution_count": 77,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -3472,12 +3472,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 416
         },
-        "outputId": "c2c76bd3-91eb-4f4a-f2eb-421209f39251"
+        "outputId": "fded7c73-d608-4463-e817-f0dd43c42d10"
       },
       "source": [
         "X_train"
       ],
-      "execution_count": 78,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3510,7 +3510,23 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>63</th>\n",
+              "      <th>0</th>\n",
+              "      <td>California</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>x</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>x</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>California</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>x</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>x</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
               "      <td>Carnitas</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -3518,34 +3534,18 @@
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>220</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>x</td>\n",
-              "      <td>x</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>224</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>188</th>\n",
+              "      <th>3</th>\n",
               "      <td>Asada</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>x</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>California</td>\n",
+              "      <td>x</td>\n",
+              "      <td>x</td>\n",
               "      <td>NaN</td>\n",
               "      <td>x</td>\n",
               "    </tr>\n",
@@ -3558,31 +3558,7 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>193</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>x</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>71</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>107</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>275</th>\n",
+              "      <th>296</th>\n",
               "      <td>California</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -3590,39 +3566,63 @@
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>103</th>\n",
+              "      <th>297</th>\n",
               "      <td>Other</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>298</th>\n",
+              "      <td>California</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>X</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>X</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>299</th>\n",
+              "      <td>Asada</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>X</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>300</th>\n",
+              "      <td>Other</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>236 rows × 5 columns</p>\n",
+              "<p>296 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "        Burrito Chips Cheese Chicken Beef\n",
-              "63     Carnitas   NaN    NaN     NaN  NaN\n",
-              "17        Other   NaN    NaN     NaN  NaN\n",
-              "220       Other   NaN      x       x  NaN\n",
-              "224       Other   NaN    NaN     NaN  NaN\n",
-              "188       Asada   NaN    NaN     NaN    x\n",
+              "0    California   NaN      x     NaN    x\n",
+              "1    California   NaN      x     NaN    x\n",
+              "2      Carnitas   NaN    NaN     NaN  NaN\n",
+              "3         Asada   NaN    NaN     NaN    x\n",
+              "4    California     x      x     NaN    x\n",
               "..          ...   ...    ...     ...  ...\n",
-              "193       Other     x    NaN     NaN  NaN\n",
-              "71        Other   NaN    NaN     NaN  NaN\n",
-              "107       Other   NaN    NaN     NaN  NaN\n",
-              "275  California   NaN    NaN     NaN  NaN\n",
-              "103       Other   NaN    NaN     NaN    X\n",
+              "296  California   NaN    NaN     NaN  NaN\n",
+              "297       Other   NaN    NaN     NaN  NaN\n",
+              "298  California   NaN      X     NaN    X\n",
+              "299       Asada   NaN    NaN     NaN    X\n",
+              "300       Other   NaN    NaN     NaN  NaN\n",
               "\n",
-              "[236 rows x 5 columns]"
+              "[296 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 87
         }
       ]
     },
@@ -3642,7 +3642,7 @@
         "\n",
         "])"
       ],
-      "execution_count": 79,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -3656,7 +3656,7 @@
         "# Fit model on training data\n",
         "log_model.fit(X_train, y_train);"
       ],
-      "execution_count": 80,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -3668,20 +3668,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "472f3f09-a974-422c-dca3-ff9ec5eba399"
+        "outputId": "97a6c5c9-1b89-41ef-d22f-ccaeb27720b0"
       },
       "source": [
         "# Check permance metric (accuracy) on test set\n",
         "print('Training Accuracy:', log_model.score(X_train, y_train))\n",
         "print('Validation Accuracy:', log_model.score(X_val, y_val))"
       ],
-      "execution_count": 81,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Training Accuracy: 0.6398305084745762\n",
-            "Validation Accuracy: 0.6833333333333333\n"
+            "Training Accuracy: 0.6486486486486487\n",
+            "Validation Accuracy: 0.5764705882352941\n"
           ],
           "name": "stdout"
         }
