--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -111,7 +111,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 257,
+      "execution_count": 296,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
         "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
       ],
-      "execution_count": 258,
+      "execution_count": 297,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "from sklearn.metrics import mean_squared_error,r2_score\n",
         "from sklearn.preprocessing import OneHotEncoder"
       ],
-      "execution_count": 274,
+      "execution_count": 298,
       "outputs": []
     },
     {
@@ -172,12 +172,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 501
         },
-        "outputId": "1ea97d38-3d41-41e3-e134-b918b8049994"
+        "outputId": "eb847416-8f8a-493c-b2f1-906f519408fc"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 260,
+      "execution_count": 299,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 260
+          "execution_count": 299
         }
       ]
     },
@@ -456,7 +456,7 @@
         "# change created to data time format for subsetting by month\n",
         "df['created'] = pd.to_datetime(df['created'])"
       ],
-      "execution_count": 262,
+      "execution_count": 300,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "# create column with month value\n",
         "df['month'] = df['created'].map(lambda x: x.month)"
       ],
-      "execution_count": 263,
+      "execution_count": 301,
       "outputs": []
     },
     {
@@ -482,13 +482,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "d85c8db4-ca0b-4bc4-ac04-878c092080a9"
+        "outputId": "4963835c-c045-4970-9b81-6c5d45b6879b"
       },
       "source": [
         "# check\n",
         "df['month'].value_counts()"
       ],
-      "execution_count": 264,
+      "execution_count": 302,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +503,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 264
+          "execution_count": 302
         }
       ]
     },
@@ -519,7 +519,7 @@
         "                                              'medium':2,\n",
         "                                              'low':1})"
       ],
-      "execution_count": 275,
+      "execution_count": 303,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
         "# create column for 'allows pets'\n",
         "df['pets'] = df['cats_allowed'] + df['dogs_allowed']"
       ],
-      "execution_count": 265,
+      "execution_count": 304,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "df['pets'] = df['pets'].mask(df['pets']==1,df['pets'].replace(1,0))\n",
         "df['pets'] = df['pets'].mask(df['pets']==2,df['pets'].replace(2,1))"
       ],
-      "execution_count": 266,
+      "execution_count": 305,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
         "# create column that show the total number of rooms.\n",
         "df['num_rooms'] = df['bedrooms'] + df['bathrooms']"
       ],
-      "execution_count": 267,
+      "execution_count": 306,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
       "source": [
         "df['perk'] = df.iloc[:,10:33].sum(axis=1)"
       ],
-      "execution_count": 268,
+      "execution_count": 307,
       "outputs": []
     },
     {
@@ -591,7 +591,7 @@
         "train = df[df['month'].isin(train_months)]\n",
         "test = df[df['month'] == 6]"
       ],
-      "execution_count": 278,
+      "execution_count": 308,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "fd39406d-60f7-40b1-d1c6-b1bcd90d470c"
+        "outputId": "bd6e1666-5e92-44a4-b808-1e9ed58cbfdc"
       },
       "source": [
         "# split data\n",
@@ -634,7 +634,7 @@
         "\n",
         "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 291,
+      "execution_count": 309,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "cd66363f-9702-4793-c080-89a9e825bb16"
+        "outputId": "da7ff9a0-714f-4e0b-ec70-5de578c94362"
       },
       "source": [
         "# run model on test set\n",
@@ -672,9 +672,9 @@
         "mse = mean_squared_error(y_test,y_pred)\n",
         "rmse = np.sqrt(mse)\n",
         "r2 = r2_score(y_test,y_pred)\n",
-        "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
+        "print(f'Testing Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 295,
+      "execution_count": 310,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,63 +688,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "H6LmXP3Hup1C",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "5df04063-4ced-4f02-ee78-9f8d1bb27154"
-      },
-      "source": [
-        "y_pred = model.predict(X_test)\n",
-        "mean_absolute_error(y_test,y_pred)"
-      ],
-      "execution_count": 290,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "762.6757476781943"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 290
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bBWo1yYVupg_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 273,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1rH2hCT2upd5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 273,
-      "outputs": []
     }
   ]
 }
